# mini-llama-cpp-release

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/mini_llama/: backend.h  batch.h  chat.h  context.h  cuda_attention.h  cuda_kv_cache.h  cuda_matmul.h  cuda_ops.h  cuda_quant.h  cuda_runtime.h  cuda_tensor.h  debug.h  forward.h  gguf.h  gguf_loader.h  gguf_tokenizer.h  kv_cache.h  loader.h  matmul_dispatch.h  model.h  ops.h  prompt_builder.h  quant.h  quantized_tensor.h  sampler.h  tensor.h  terminal.h  thread_pool.h  tokenizer.h
models/chat/: special_tokens.json  vocab.json
models/tiny/: model.json  test.gguf  vocab.json
scripts/: compare_logits.py  download_demo_model.py  export_gguf_tokenizer.py  export_tiny_model.py  generate_vocab_json.py  make_golden.py  make_test_gguf.py  reference_forward.py  run_cuda_benchmarks.py  test_backend_cli.py  test_cuda_chat_smoke.py  test_golden.py  test_mvp.py  test_quant_cli.py  test_threaded_cli.py  upgrade_model_json.py
src/: backend.cpp  batch.cpp  bpe_tokenizer.cpp  chat.cpp  context.cpp  cuda_attention.cpp  cuda_attention.cu  cuda_kv_cache.cpp  cuda_matmul.cpp  cuda_ops.cpp  cuda_ops.cu  cuda_quant.cpp  cuda_quant.cu  cuda_runtime.cpp  cuda_tensor.cpp  debug.cpp  forward.cpp  gguf.cpp  gguf_loader.cpp  gguf_tokenizer.cpp  json_vocab_tokenizer.cpp  kv_cache.cpp  loader.cpp  main.cpp  matmul_optimized.cpp  model.cpp  ops.cpp  prompt_builder.cpp  quant.cpp  quantized_tensor.cpp  sampler.cpp  tensor.cpp  terminal.cpp  thread_pool.cpp  tokenizer.cpp
tests/: gguf_loader_fixture.h  gguf_tokenizer_fixture.h  test_batch.cpp  test_chat.cpp  test_cuda_attention.cpp  test_cuda_forward.cpp  test_cuda_forward_buffer.cpp  test_cuda_forward_linear.cpp  test_cuda_kv_cache.cpp  test_cuda_matmul.cpp  test_cuda_ops.cpp  test_cuda_quant.cpp  test_cuda_runtime.cpp  test_debug.cpp  test_forward.cpp  test_gguf.cpp  test_gguf_loader.cpp  test_gguf_tokenizer.cpp  test_kv_cache.cpp  test_loader.cpp  test_main.cpp  test_main.h  test_ops.cpp  test_quant.cpp  test_sampler.cpp  test_tensor.cpp  test_threaded_matmul.cpp  test_tokenizer.cpp
